<resources>
    <string name="app_name">BlocSpot</string>
    <string name="menu_item_view_list">View List</string>
    <string name="menu_item_view_map">View Map</string>
    <string name="menu_item_filter_locations">Filter</string>
    <string name="menu_item_search_locations">Search</string>
    <string name="menu_item_close_search_locations">Close</string>
    <string name="location_list_frag_add_location">Add Location</string>
    <string name="dialog_new_location_item_title">Location Title</string>
    <string name="dialog_new_location_item_longitude">Longitude</string>
    <string name="dialog_new_location_item_latitude">Latitude</string>
    <string name="dialog_add_category_hint">Title</string>
    <string name="dialog_filter_title">Category Name</string>
    <string name="dialog_location_item_defaultCategory">Select Category...</string>
    <string name="dialog_location_item_navigateTo">Navigate To This Location</string>
    <string name="dialog_location_item_delete_item">Delete Location</string>
    <string name="dialog_location_item_category">Location Category</string>
    <string name="dialog_location_item_edit_note">Edit Location Note</string>
    <string name="dialog_location_item_save_note">Save Location Note</string>

    <string name="consumer_key">zK2exzvOrxfs2M09bj0Heg</string>
    <string name="consumer_secret">XFT3H73To_iJRZi28Mf9b8mMFvQ</string>
    <string name="token">2-kynxAfNS8Yg5dmAWjVVjtpcLVHN59r</string>
    <string name="token_secret">8TQKXUuSrtXG1Ej4TI4n47q5K94</string>

</resources>
