<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_location_item_category"/>

    <Spinner
        android:id="@+id/sp_location_item_option_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_location_item_option_navigateTo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dialog_location_item_navigateTo"/>

    <Button
        android:id="@+id/btn_location_item_option_edit_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dialog_location_item_edit_note"/>

    <EditText
        android:id="@+id/et_location_item_option_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:inputType="textMultiLine"
        android:lines="5"
        android:background="@android:drawable/edit_text"
        android:textColor="@android:color/primary_text_light"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_location_item_option_delete_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dialog_location_item_delete_item"/>


</LinearLayout>